--- a/Pages/UserPage.xaml
+++ b/Pages/UserPage.xaml
@@ -38,6 +38,11 @@
                             <Setter Property="Margin" Value="3,6,3,0"/>
                         </Style>
                     </local:AdaptiveGridView.ItemContainerStyle>
+                    <local:AdaptiveGridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid Orientation="Horizontal" CacheLength="0"/>
+                        </ItemsPanelTemplate>
+                    </local:AdaptiveGridView.ItemsPanel>
                     <local:AdaptiveGridView.ItemTemplate>
                         <DataTemplate x:DataType="local:UserVideosViewItem">
                             <Grid Background="{ThemeResource SystemControlBackgroundAltHighBrush}" Padding="5">
@@ -104,6 +109,11 @@
                             <Setter Property="Margin" Value="3,6,3,0"/>
                         </Style>
                     </local:AdaptiveGridView.ItemContainerStyle>
+                    <local:AdaptiveGridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid Orientation="Horizontal" CacheLength="0"/>
+                        </ItemsPanelTemplate>
+                    </local:AdaptiveGridView.ItemsPanel>
                     <local:AdaptiveGridView.ItemTemplate>
                         <DataTemplate x:DataType="local:UserAudiosViewItem">
                             <Grid Background="{ThemeResource SystemControlBackgroundAltHighBrush}" Padding="5">
@@ -170,6 +180,11 @@
                             <Setter Property="Margin" Value="3,6,3,0"/>
                         </Style>
                     </local:AdaptiveGridView.ItemContainerStyle>
+                    <local:AdaptiveGridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid Orientation="Horizontal" CacheLength="0"/>
+                        </ItemsPanelTemplate>
+                    </local:AdaptiveGridView.ItemsPanel>
                     <local:AdaptiveGridView.ItemTemplate>
                         <DataTemplate x:DataType="local:FavouritesUserViewItem">
                             <Grid Background="{ThemeResource SystemControlBackgroundAltHighBrush}" Padding="5">
