--- a/App.xaml
+++ b/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" ControlsResourcesVersion="Version1"/>
             </ResourceDictionary.MergedDictionaries>
+            <FontFamily x:Key="FluentSystemIconsRegularFontFamily">/Assets/Fonts/FluentSystemIcons-Regular-v1.1.191.ttf#FluentSystemIcons-Regular</FontFamily>
             <!--
             <Style x:Key="DefaultTabViewStyle" TargetType="muxc:TabView">
                 <Setter Property="KeyboardAcceleratorPlacementMode" Value="Hidden"/>
